tests/paczka1/fuzzy1/41020491.err
Error in line 4: M4z07 S201 59,6
Error in line 5: M4z07 A684 79,9
Error in line 13: aELJ A492 40,3
Error in line 32: O06F¾S578¾53,3
Error in line 28: O06F A684 59,3
